test/features/errors/semantic/e1042_invalid_self_type.spl
# E1042: Invalid Self Type

Feature: E1042 - Invalid Use of Self Type
  As a Simple compiler
  I want to detect `Self` type used outside valid contexts
  So that Self is only used in impl blocks or traits

  Background:
    Given I have the Simple compiler

  Scenario: Self type in free function
    When I compile:
      '''
      fn test() -> Self:  # Error: Self outside impl/trait
        # implementation
      '''
    Then I should see error E1042 at line 1
    And the error message should be "`Self` type cannot be used in this context"
    And the label should indicate "invalid use of `Self`"
    And the help should suggest "use `Self` only within impl blocks or trait definitions"

  Scenario: Self in module-level type alias
    When I compile:
      '''
      type Alias = Self  # Error: Self at module level
      '''
    Then I should see error E1042

  Scenario: Valid Self in impl block
    When I compile:
      '''
      struct Counter:
        value: i32

      impl Counter:
        fn new() -> Self:  # OK: Self = Counter in this impl
          Counter { value: 0 }
      '''
    Then compilation should succeed

  Scenario: Valid Self in trait
    When I compile:
      '''
      trait Cloneable:
        fn clone() -> Self
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test() -> Self:
        # body
      '''
    Then I should see error E1042
    And the error message should contain "잘못된 Self 타입"
